Remove single episodes from watchlist modal and fix review header misalignment

--- a/app/assets/stylesheets/_header.css.scss
+++ b/app/assets/stylesheets/_header.css.scss
@@ -404,7 +404,7 @@
   figure {
     position: relative;
     overflow: hidden;
-    margin-bottom: -150px;
+    margin-bottom: -180px;
     height: 300px;
     border-bottom: 1px solid white;
 
