--- a/app/assets/stylesheets/anime-discover.css.scss
+++ b/app/assets/stylesheets/anime-discover.css.scss
@@ -218,6 +218,7 @@
     background: white; 
     position: relative; 
     height: 50px; 
+    top: 30px;
     margin-bottom: 50px;
     @media (max-width: 480px) {
       margin-bottom: 150px;
